[package]
name = "mc-scoreboards"
version = "0.1.0"
author = ["defnot <defnot001@gmail.com>"]
about = "Generates datapacks with functions for Minecraft scoreboards"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.14", features = ["derive"]}
serde = { version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
